* fix Class.block_range method (this fix pylint's inline disabling of * fix Class.block_range method (this fix pylint's inline disabling of       messages on classes)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Change log for the astng package
 ================================
 
+ --
+    * fix Class.block_range method (this fix pylint's inline disabling of 
+	  messages on classes)
+	  
 2006-04-19  --  0.16.0
     * fix living object building to consider classes such as property as
       a class instead of a data descriptor
