--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@ Change log for the astng package
 ================================
 
  --
-    * fix Class.block_range method (this fix pylint's inline disabling of 
-	  messages on classes)
+    * fix [Class|Module].block_range method (this fixes pylint's inline 
+      disabling of messages on classes/modules)
 	  
 2006-04-19  --  0.16.0
     * fix living object building to consider classes such as property as
