--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+logilab-astng (0.16.0-2) unstable; urgency=low
+
+  * Updated standards to 3.7.2
+  * use debhelper 5
+  * fixed encoding of maintainer name in debian/control
+
+ -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:05:49 +0200
+
 logilab-astng (0.16.0-1) unstable; urgency=low
 
   * new upstream release
