--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Change log for the astng package
  --
     * fix Class.block_range method (this fix pylint's inline disabling of 
 	  messages on classes)
+    * drop python2.2 support remove code that was working around python2.2
+     
 	  
 2006-04-19  --  0.16.0
     * fix living object building to consider classes such as property as
