--- a/ChangeLog
+++ b/ChangeLog
@@ -2,11 +2,12 @@ Change log for the astng package
 ================================
 
  --
+    * python 2.5 support, patch provided by Marien Zwart
     * fix [Class|Module].block_range method (this fixes pylint's inline 
       disabling of messages on classes/modules)
     * handle class.__bases__ and class.__mro__ (proper metaclass handling
       still needed though)
-    * drop python2.2 support remove code that was working around python2.2
+    * drop python2.2 support: remove code that was working around python2.2
 	
 2006-04-19  --  0.16.0
     * fix living object building to consider classes such as property as
