--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.16.1-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 25 Sep 2006 16:42:28 +0200
+
 logilab-astng (0.16.0-2) unstable; urgency=low
 
   * Updated standards to 3.7.2
