try to fix debian package

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.16.1-2) unstable; urgency=low
+
+  * duh?
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 26 Sep 2006 17:55:38 +0200
+
 logilab-astng (0.16.1-1) unstable; urgency=low
 
   * new upstream release
