--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 logilab-astng (0.16.1-2) unstable; urgency=low
 
-  * duh?
+  * bad postinst
 
  -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 26 Sep 2006 17:55:38 +0200
 
