--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.16.1-3) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 15 Nov 2006 09:07:01 +0100
+
 logilab-astng (0.16.1-2) unstable; urgency=low
 
   * bad postinst
