--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.17.0-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 22 Feb 2007 10:59:44 +0100
+
 logilab-astng (0.16.3-1) unstable; urgency=low
 
   * new upstream release
