--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Change log for the astng package
     * include patch from Marien Zwart fixing some test / py 2.5
     * fix #3651: crash when callable as defaut arg
     * fix #3670: subscription inference crash in some cases
+    * fix #3673: Lambda instance has no attribute 'pytype'
 	
 2007-02-22  --  0.17.0
     * api change to be able to infer using a context (used to infer function call
