--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ Change log for the astng package
     * fix crash on numpy
     * fix potential InfiniteRecursion error with builtin objects
     * include patch from Marien Zwart fixing some test / py 2.5
+    * be more error resilient when accessing living objects from external
+      code in the manager
 	
 2007-02-22  --  0.17.0
     * api change to be able to infer using a context (used to infer function call
