check in Dave Borowitz fix

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Change log for the astng package
 ================================
 
+ --
+    * fixed recursion arguments in nodes_of_class method as notified by
+      Dave Borowitz 
+	
 2007-06-07  --  0.17.1
     * fix #3651: crash when callable as defaut arg
     * fix #3670: subscription inference crash in some cases
