--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+logilab-astng (0.17.2-2) unstable; urgency=low
+
+  * Updated standards version (no changes required)
+  * Moved Homepage from description to source package
+  * Upload package to Debian archive
+
+ -- Alexandre Fayolle <afayolle@debian.org>  Thu, 14 Feb 2008 15:58:06 +0100
+
 logilab-astng (0.17.2-1) unstable; urgency=low
 
   * new upstream release
