--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,9 @@ Change log for the astng package
  --
     * fix #6015: filter statements bug triggering W0631 false positive in pylint
     * fix #5571: Function.is_method() should return False on module level
-      functions decorated by staticmethod/classmethod
+      functions decorated by staticmethod/classmethod (avoid some crash in pylint)
+    * fix #5010: understand python 2.5 explicit relative imports
+	
 2008-09-10  --  0.17.3
     * fix #5889: astng crash on certain pyreverse projects
     * fix bug w/ loop assigment in .lookup
