--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.17.4-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 19 Nov 2008 15:16:37 +0100
+
 logilab-astng (0.17.3-1) unstable; urgency=low
 
   * new upstream release
