--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,40 @@
+logilab-astng (0.17.4-2) UNRELEASED; urgency=low
+
+  * debian/control
+    - added ${misc:Depends} to Depends
+
+ -- Sandro Tosi <morph@debian.org>  Sun, 30 Nov 2008 00:08:46 +0100
+
+
+logilab-astng (0.17.4-1.1) unstable; urgency=low
+
+  * New upstream release
+  * debian/control
+    - adopted under DPMT umbrella (in agreement with Alexandre Fayolle) 
+    - bump Standards-Version to 3.8.0 (no changes needed)
+    - added Vcs-{Svn,Browser} field
+    - little add to short description and empty line at bottom removal
+    - moved python-central to Build-Depends-Indep
+  * debian/copyright
+    - updated copyright years, adding Sylvain as copyright holder
+    - added a clear license section
+    - indented upstream author, copyright holder and license with 4 spaces
+    - update the reference to local license file with GPL-2
+  * debian/rules
+    - install upstream 'Changelog' using dh_installchangelog
+    - added "python setup.py clean"
+    - merged rm into dh_clean call
+    - used '-delete' find option instead of xargs
+    - removed dh_python, dh_link and dh_installman calls
+  * debian/watch
+    - updated to version 3
+    - added opts=pasv for passive ftp
+    - removed options after url
+  * debian/pycompat
+    - removed since not needed anymore
+
+ -- Sandro Tosi <morph@debian.org>  Sat, 29 Nov 2008 20:07:01 +0100
+
 logilab-astng (0.17.4-1) unstable; urgency=low
 
   * new upstream release
@@ -9,6 +46,12 @@ logilab-astng (0.17.3-1) unstable; urgency=low
   * new upstream release
  
  -- Emile Anclin <emile.anclin@logilab.fr>  Wed, 10 Sep 2008 13:42:06 +0100
+
+logilab-astng (0.17.2-2.1) unstable; urgency=low
+
+  * NMU. Rebuild to move files to /usr/share/pyshared. Closes: #490474.
+
+ -- Matthias Klose <doko@debian.org>  Fri, 18 Jul 2008 15:55:34 +0000
 
 logilab-astng (0.17.2-2) unstable; urgency=low
 
