logilab-astng-debian-version 0.18.0-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.18.0-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Emile Anclin <emile.anclin@logilab.fr>  Thu, 19 Mar 2009 15:17:38 +0100
+
 logilab-astng (0.17.4-2) UNRELEASED; urgency=low
 
   * debian/control
