--- a/ChangeLog
+++ b/ChangeLog
@@ -1,16 +1,22 @@
 Change log for the astng package
 ================================
 
---
+2009-03-25  --  0.19.0
+    * fixed python 2.6 issue (tests ok w/ 2.4, 2.5, 2.6. Anyone using 2.2 / 2.3
+      to tell us if it works?)
     * some understanding of the __builtin__.property decorator
     * inference: introduce UnboundMethod / rename InstanceMethod to BoundMethod
-	
-2009-03-19  -- 0.18.0
+
+
+
+2009-03-19  --  0.18.0
     * major api / tree structure changes to make it works with compiler *and*
       python >= 2.5 _ast module
+
     * cleanups and refactoring on the way
 
-	
+
+
 2008-11-19  --  0.17.4
     * fix #6015: filter statements bug triggering W0631 false positive in pylint
 
