--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+logilab-astng (0.19.0-1) unstable; urgency=low
+
+  * actually backport Sandro Tosi 0.17.4-2 changes which wasn't in 0.18.0-1
+  * debian/rules: set NO_SETUPTOOLS when calling python setup.py
+
+ --
+
 logilab-astng (0.18.0-1) unstable; urgency=low
 
   * new upstream release
