--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,25 @@
 Change log for the astng package
 ================================
 
+2009-08-27  --  0.19.1
+    * fix #8771: crash on yield expression
+
+    * fix #10024: line numbering bug with try/except/finally
+
+    * fix #10020: when building from living object, __name__ may be None
+
+    * fix #9891: help(logilab.astng) throws TypeError
+
+    * fix #9588: false positive E1101 for augmented assignment
+
+
+
 2009-03-25  --  0.19.0
     * fixed python 2.6 issue (tests ok w/ 2.4, 2.5, 2.6. Anyone using 2.2 / 2.3
       to tell us if it works?)
+
     * some understanding of the __builtin__.property decorator
+
     * inference: introduce UnboundMethod / rename InstanceMethod to BoundMethod
 
 
