--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.19.1-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Thu, 27 Aug 2009 08:27:33 +0200
+
 logilab-astng (0.19.0-2) unstable; urgency=medium
 
   [ Sandro Tosi ]
