--- a/README
+++ b/README
@@ -6,7 +6,7 @@ What's this ?
 
 The aim of this module is to provide a common base representation of
 python source code for projects such as pychecker, pyreverse,
-pylint... Well, actually the development of this library is essentialy
+pylint... Well, actually the development of this library is essentially
 governed by pylint's needs.
 
 Since 0.18, it provides a compatible representation which may come
@@ -16,7 +16,7 @@ from the `compiler` module (for python <= 2.4) pr the `_ast` module
 It extends bare node classes with some additional methods and
 attributes. Instance attributes are added by a builder object, which
 can generate extended ast (let's call them astng ;) by visiting either
-an existant ast tree or by inspecting living object. Methods are added
+an existent ast tree or by inspecting living object. Methods are added
 by monkey patching ast classes. Finally some support for static
 inference is provided.
 
