--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.19.2-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 18 Dec 2009 11:53:32 +0100
+
 logilab-astng (0.19.1-1) unstable; urgency=low
 
   * new upstream release
