--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Change log for the astng package
 ================================
 
+2009-12-18  --  0.19.3
+    * fix name error making 0.19.2 almost useless
+
+
+
 2009-12-18  --  0.19.2
     * fix #18773: inference bug on class member (due to bad handling of instance
       / class nodes "bounded" to method calls)
