--- a/ChangeLog
+++ b/ChangeLog
@@ -2,9 +2,10 @@ Change log for the astng package
 ================================
 
 --
-	* Ned Batchelder to properly import eggs with Windows line
+	* Ned Batchelder patch to properly import eggs with Windows line
 	endings.  This fixes a problem with pylint not being able to
 	import setuptools.
+        * Winfried Plapper patch fixing visit_ifexp in nodes_as_string
 
 2009-12-18  --  0.19.3
     * fix name error making 0.19.2 almost useless
