--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Change log for the astng package
 --  
 
 2010-03-22 -- 0.20.0
+    * fix #20464: raises “TypeError: '_Yes' object is not iterable” on list inference
+
     * fix #19882: pylint hangs
 
     * fix #20759: crash on pyreverse UNARY_OP_METHOD KeyError '~'
@@ -22,8 +24,10 @@ Change log for the astng package
     * Ned Batchelder patch to properly import eggs with Windows line
       endings.  This fixes a problem with pylint not being able to
       import setuptools.
+
     * Winfried Plapper patches fixing .op attribute value for AugAssign nodes,
       visit_ifexp in nodes_as_string
+
     * Edward K. Ream / Tom Fleck patch closes #19641 (maximum recursion depth
       exceeded" messages w/ python 2.6), see https://bugs.launchpad.net/pylint/+bug/456870
 
