--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.20.2-1) unstable; urgency=low
+
+  * new upstream release
+
+ --
+
 logilab-astng (0.20.1-1) unstable; urgency=low
 
   * new upstream release
