--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.20.3-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 28 Sep 2010 14:30:03 +0200
+
 logilab-astng (0.20.2-1) unstable; urgency=low
 
   * new upstream release
