--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.20.4-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Emile Anclin <emile.anclin@logilab.fr>  Mon, 27 Oct 2010 11:24:36 +0200
+
 logilab-astng (0.20.3-1) unstable; urgency=low
 
   * new upstream release
