--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 Change log for the astng package
 ================================
 
+2010-12-16  --  0.21.1
+
+    * python3: handle file encoding; fix a lot of tests
+
+    * fix #52006: "True" and "False" can be assigned as variable in Python2x
+    * fix #8847: pylint doesn't understand function attributes at all
+    * fix #8774: iterator / generator / next method
+
 2010-11-15  --  0.21.0
     * python3.x: first python3.x release
 
