--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.21.1-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Émile Anclin <emile.anclin@logilab.fr>  Thu, 16 Dec 2010 13:43:29 +0100
+
 logilab-astng (0.21.0-1) unstable; urgency=low
 
   * new upstream release
