--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ logilab-astng (0.21.1-1) unstable; urgency=low
 
   * new upstream release
 
- -- Émile Anclin <emile.anclin@logilab.fr>  Thu, 16 Dec 2010 13:43:29 +0100
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 11 Jan 2011 15:38:20 +0100
 
 logilab-astng (0.21.0-1) unstable; urgency=low
 
