closes #69217: please add column offset to the astng node

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Change log for the astng package
 ================================
 
+--
+    * added column offset information on nodes (patch by fawce)
+
 2011-01-11  --  0.21.1
     * python3: handle file encoding; fix a lot of tests
 
