--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@ Change log for the astng package
     * #70381: IndendationError in import causes crash
     * #70565: absolute imports treated as relative (patch by Jacek Konieczny)
     * #70494: fix file encoding detection with python2.x
+    * py3k: __builtin__ module renamed to builtins, we should consider this to properly
+      build ast for builtin objects
 
 2011-01-11  --  0.21.1
     * python3: handle file encoding; fix a lot of tests
