--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.22.0-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 18 Jul 2011 16:00:36 +0200
+
 logilab-astng (0.21.1-1) unstable; urgency=low
 
   * new upstream release
