--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,12 @@ Change log for the astng package
 ================================
 
 --
-    * #74746: should return empty module when __main__ is imported (patch by google)
+    * #74746: should return empty module when __main__ is imported (patch by
+      google)
+
+    * #74748: getitem protocal return constant value instead of a Const node
+      (patch by google)
+
 
 2011-07-18  --  0.22.0
     * added column offset information on nodes (patch by fawce)
