closes #74746: should return empty module when __main__ is imported
Fixes a problem when a module imports __main__. While this is benign
normally (pylint just imports itself, and exposes its __main__ module to
astng, which is wrong, but not fatal), this led to a crash in our deployed,
standalone pylint version.

The fix is now that a completely empty module is returned, since neither the
linter nor the module in question can make any assumptions about __main__.

(patch by google)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Change log for the astng package
 ================================
 
+--
+    * #74746: should return empty module when __main__ is imported (patch by google)
+
 2011-07-18  --  0.22.0
     * added column offset information on nodes (patch by fawce)
 
