remove sys.path manipulation around builder.string_build (closes #76159)
That has probably been added in the past as a work around to have relative
import working. Not sure if it's still necessary or not, but that's not
a correct solution anyway, as this may cause pb with some module wrongly
named and added to sys.modules, which may lead to crash (see details
on stack overflow, link on the ticket)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@ Change log for the astng package
 ================================
 
 --
+    * #76159: putting module's parent directory on the path causes problems
+      linting when file names clash
+
     * #74746: should return empty module when __main__ is imported (patch by
       google)
 
