Fix raw_building.object_build for pypy implementation. Closes #99583

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Change log for the astng package
 ================================
 
+--
+    * #99583: fix raw_building.object_build for pypy implementation
+    * use `open` rather than `file` in scoped_nodes as 2to3 miss it
+
 2011-12-08  --  0.23.1
     * #62295: avoid "OSError: Too many open files" by moving
       .file_stream as a Module property opening the file only when needed
