--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logilab-astng (0.24.0-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 18 Jul 2012 08:16:33 +0200
+
 logilab-astng (0.23.1-1) unstable; urgency=low
 
   * new upstream release
